--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,6 +9,7 @@
 @import 'index/service';
 @import 'product';
 @import 'index/top-product';
+@import 'index/promotions';
 @import 'index/partners';
 @import 'index/news';
 
