--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -116,7 +116,6 @@
     transform: translateX(-14px);
   }
 
-
   &__search-block {
     position: relative;
   }
@@ -154,7 +153,7 @@
   }
 
   &__user-nav {
-    max-width: 17px;
+    max-width: 173px;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -170,7 +169,8 @@
 
   &__user-link {
     position: relative;
-    transition: 0.5s;
+    // мне кажется что не работает transition
+    transition: background-color 0.5s, fill 0.5s;
     display: flex;
     justify-content: center;
     width: 50px;
