--- a/app/scss/product.scss
+++ b/app/scss/product.scss
@@ -1,331 +1,16 @@
 .product {
-  padding-top: 74px;
   text-align: center;
 
   &__items {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 30px;
-    margin-bottom: 60px;
+    margin-bottom: 46px;
   }
 
   &__title {
-    margin-bottom: 29px;
+    margin-bottom: 30px;
   }
 }
 
-.product-item {
-  max-width: 302px;
-  width: 100%;
-  height: 409px;
-  border: 1px solid rgba(17, 17, 17, 0.2);
-  box-sizing: border-box;
-  border-radius: 6px;
-
-  &:hover {
-    border-color: $green-900;
-  }
-
-  &__img-box {
-    height: 215px;
-    position: relative;
-    margin-bottom: 5px;
-    transition: all 0.5s;
-  }
-
-  &__img-link {
-    display: block;
-    position: relative;
-    overflow: hidden;
-
-    &:hover::before {
-      transform: translateY(-50%);
-    }
-
-    &:hover::after {
-      background-color: rgba(0, 0, 0, 0.1);
-    }
-
-    &::before {
-      content: '';
-      background-image: url('../images/icons/icon-vector-product.svg');
-      position: absolute;
-      @extend %bg-img;
-      background-size: auto;
-      width: 48px;
-      height: 48px;
-      background-color: $white;
-      border-radius: 24px;
-      top: 50%;
-      left: 40%;
-      transform: translateY(300%);
-      transition: all 0.5s;
-    }
-
-    &::after {
-      content: '';
-      position: absolute;
-      background-color: rgba(0, 0, 0, 0);
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      transition: background-color 0.5s;
-    }
-  }
-
-  &__images {
-    object-fit: contain;
-  }
-
-  &__info {
-    display: none;
-  }
-
-  &__span {
-    max-width: 31px;
-    display: inline-block;
-    flex-wrap: wrap;
-    position: absolute;
-    left: 0;
-    margin-top: 7px;
-    margin-left: 10px;
-  }
-
-  &__badge {
-    @extend %opensans-700;
-    font-size: 10px;
-    line-height: 1;
-    color: $white;
-    padding: 3px 6px;
-    background-color: $green-900;
-    border-radius: 6px;
-    display: inline-block;
-    margin-bottom: 2px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-
-    &--sale {
-      background-color: $red-900;
-    }
-
-    &--hit {
-      background-color: $orange-900;
-    }
-  }
-
-  &__top {
-    position: relative;
-    height: 57px;
-  }
-
-  &__heart {
-    @extend %none-btn;
-    cursor: pointer;
-    position: absolute;
-    width: 44px;
-    height: 44px;
-    right: 4px;
-    top: 9px;
-
-    svg use {
-      fill: #C1C1C1;
-    }
-
-    &:hover svg use {
-      fill: #FFB800;
-    }
-
-    &:focus {
-      outline: 3px solid #E0EDCF;
-      border-radius: 3px;
-    }
-
-    &:active svg path {
-      fill: rgba(255, 184, 0, 0.5);
-    }
-  }
-
-  &__title {
-    @extend %opensans-600;
-    line-height: 1.4;
-    font-size: 14px;
-    padding: 0 17px;
-    height: 60px;
-    margin-bottom: 9px;
-    text-align: left;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    transform: translateY(12px);
-  }
-
-  &__price {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    padding: 11px 18px 11px 19px;
-    line-height: 1;
-    color: $dark-500;
-  }
-
-  &__new-price {
-    padding-right: 18px;
-  }
-
-  &__old-price {
-    text-decoration: line-through;
-    color: $silver-600;
-    transform: translate(-4px, -2px);
-  }
-
-  &__cart {
-    @extend %none-btn;
-    cursor: pointer;
-    width: 32px;
-    height: 32px;
-    // сама корзинка жирная, не такая как в макете
-    stroke: $white;
-
-    svg use {
-      fill: #63A60E;
-    }
-
-    &:hover svg use {
-      fill: #4D800C;
-    }
-
-    &:focus {
-      outline: solid 4px $green-200;
-    }
-
-    &:active {
-      stroke: rgba(255, 255, 255, 0.5);
-    }
-
-    // тень не получилось сделать, помоги пожалуйста
-    &:active svg rect {
-      fill: #63A60E;
-      outline: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-  }
-}
-
-// код блока promotions
-.product-item.product-item--mini {
-  height: 124px;
-  position: relative;
-  background-color: $white;
-
-  .product-item__top {
-    height: 0;
-  }
-
-  .product-item__img-box {
-    width: 100px;
-    height: 100px;
-    position: relative;
-  }
-
-  .product-item__images {
-    position: absolute;
-    top: 12px;
-    left: 11px;
-  }
-
-  .product-item__span {
-    margin-top: 10px;
-  }
-
-  .product-item__heart {
-    display: none;
-  }
-
-  .product-item__top {
-    z-index: 1;
-  }
-
-  .product-item__title {
-    position: absolute;
-    top: 12px;
-    left: -1px;
-    transform: translateX(107px);
-    width: 205px;
-  }
-
-  .product-item__status {
-    position: absolute;
-    transform: translate(-16px, -27px);
-    text-transform: uppercase;
-    @extend %opensans-600;
-    font-size: 10px;
-    line-height: 1;
-    color: $green-900;
-  }
-
-  .product-item__status-ends {
-    color: $red-900;
-  }
-
-  .product-item__status-no {
-    color: $silver-600;
-  }
-
-  .product-item__price {
-    position: absolute;
-    right: 0;
-    left: 103px;
-    transform: translateY(-42px);
-  }
-
-  .product-item__price-all {
-    display: flex;
-    align-items: baseline;
-  }
-
-  .product-item__new-price {
-    @extend %opensans-600;
-    font-size: 20px;
-  }
-
-  .product-item__old-price {
-    font-size: 12px;
-  }
-
-  .product-item__rub-new {
-    font-size: 14px;
-  }
-
-  .product-item__cart {
-    display: none;
-  }
-
-  .product-item__new-price {
-    order: -1;
-  }
-
-  .product-item__rating {
-    position: relative;
-    left: 106px;
-    bottom: 11px;
-    @extend %opensans-700;
-    line-height: 1;
-
-    &::before {
-      content: '';
-      position: absolute;
-      background-image: url('../images/promotions/star.png');
-      width: 16px;
-      height: 16px;
-      left: 23px;
-      bottom: 0;
-      @extend %bg-img;
-    }
-  }
-
-  .btn-show__mini {
-    background-color: $green-900;
-  }
-}
+// код карточки товара в product-item 
