--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,6 +8,8 @@
 @import 'index/slider-top';
 @import 'index/service';
 @import 'product';
+@import 'product-item';
+@import 'product-item--mini';
 @import 'index/top-product';
 @import 'index/promotions';
 @import 'index/partners';
