--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -17,9 +17,7 @@
   }
 
   &__link {
-    color: $white;
     position: relative;
-    transition: color 0.7s;
 
     &--address {
       padding-left: 44px;
@@ -73,18 +71,19 @@
     padding: 15px 38px 15px 61px;
     position: relative;
     border: none;
-
-    transform: translateX(-9px);
+    transform: translateX(-7px);
     transition: 0.5s;
     cursor: pointer;
+    margin-right: 10px;
 
     &:hover {
       background-color: #E0EDCF;
       border-radius: 6px 6px 0px 0px;
     }
-      &:focus {
-        outline: 3px solid #E0EDCF;
-      }
+
+    &:focus {
+      outline: 3px solid #E0EDCF;
+    }
   }
 
   &__btn::before,
@@ -113,7 +112,7 @@
 
   &__search {
     display: flex;
-    transform: translateX(-14px);
+    transform: translateX(-17px);
   }
 
   &__search-block {
@@ -169,8 +168,7 @@
 
   &__user-link {
     position: relative;
-    // мне кажется что не работает transition
-    transition: background-color 0.5s, fill 0.5s;
+    transition: background-color 0.5s;
     display: flex;
     justify-content: center;
     width: 50px;
@@ -182,6 +180,7 @@
 
     svg use {
       fill: $white;
+      transition: fill 0.5s;
     }
 
     &:hover {
@@ -226,10 +225,5 @@
 
   &__item:not(:last-child) {
     padding-right: 24px;
-  }
-// почему не работает color 0.6s;
-  &__link {
-    color: $white;
-    transition: color 0.6s;
   }
 }
