--- a/app/scss/index/news.scss
+++ b/app/scss/index/news.scss
@@ -1,10 +1,14 @@
 .news {
-  margin-bottom: 72px;
+  // padding-bottom: 72px;
 
-  &__wrapper {
+  &__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  &__title {
+    margin-bottom: 29px;
   }
 
   &__all {
@@ -18,6 +22,7 @@
     margin-bottom: 31px;
     margin-right: 10px;
     padding-bottom: 2px;
+    transition: color 0.5s;
 
     &:hover {
       color: #4D800C;
@@ -43,15 +48,20 @@
     max-width: 410px;
     width: 100%;
     position: relative;
+    border: none;
     border-radius: 6px;
     overflow: hidden;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
     cursor: pointer;
+    transition: color 0.5s;
+    padding-bottom: 18px;
+
+    &:hover p {
+      color: $green-900;
+    }
 
     &:focus {
-      box-shadow: 3px rgba(99, 166, 14, 0.5);
-
-      border-radius: 6px;
+      box-shadow: 0px 0px 0px 4px #E0EDCF;
     }
   }
 
@@ -72,8 +82,9 @@
   &__month {
     @extend %opensans-700;
     font-size: 10px;
-    line-height: 14px;
+    line-height: 1.4;
     letter-spacing: 0.1em;
+    text-transform: uppercase;
     margin-bottom: 4px;
   }
 
@@ -85,18 +96,20 @@
   }
 
   &__subtitle-text {
-    display: block;
     @extend %opensans-600;
+    height: 90px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
     font-size: 16px;
     line-height: 1.5;
     color: $dark-900;
     letter-spacing: 0;
-    padding: 19px 17px 18px;
+    padding: 20px 18px 0 18px;
+    overflow: hidden;
     text-overflow: ellipsis;
     transition: color 0.5s;
-
-    &:hover {
-      color: $green-900;
-    }
   }
 }
