--- a/app/scss/index/partners.scss
+++ b/app/scss/index/partners.scss
@@ -2,20 +2,17 @@
   padding: 72px;
 
   &__list {
+    max-width: 1180px;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin: 0 -13px;
-// не становятся так по макету
-     // max-width: 1180px;
-      // width: 100%;
-    // display: flex;
-    // justify-content: space-between;
-    // align-items: center;
+    margin: 0 auto;
   }
 
   &__img {
     opacity: 0.5;
+    transition: opacity 0.7s;
 
     &:hover {
       opacity: 1;
