--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -48,6 +48,10 @@
   }
 }
 
+// .menu__btn{
+//   display: none;
+// }
+
 .header-bottom {
   background-color: $green-900;
 
@@ -215,6 +219,10 @@
       transform: translate(4px, 3px);
     }
   }
+
+  &__user-item--search {
+    display: none;
+  }
 }
 
 .menu {
@@ -226,4 +234,140 @@
   &__item:not(:last-child) {
     padding-right: 24px;
   }
+
+  &__btn {
+    display: none;
+  }
+}
+
+
+
+// ====================================================================================================================================================================================================================================================================================================================================================================
+
+
+@media (max-width: $xxl) {
+  .header-bottom {
+    &__btn {
+      margin-left: 10px;
+    }
+
+    &__search-input {
+      min-width: 218px;
+    }
+  }
+}
+
+@media (max-width: $xl) {
+  .header-bottom {
+    &__logo {
+      display: none;
+    }
+  }
+
+  .logo-short {
+    display: block;
+  }
+}
+
+@media (max-width: $lg) {
+  .header-top {
+    &__link {
+      color: transparent;
+      font-size: 1px;
+      position: static;
+
+      &::before {
+        top: 0px;
+        right: 0;
+        left: revert;
+      }
+
+      &--address {
+        padding-left: 0;
+      }
+
+      &--address::before {
+        margin-right: 50px;
+      }
+    }
+
+    &__inner {
+      position: relative;
+    }
+  }
+
+  .header-bottom {
+
+    &__btn,
+    &__search {
+      display: none;
+    }
+
+    &__inner {
+      padding: 11px 0;
+    }
+
+    &__user-link--user {
+      display: none;
+    }
+
+    &__user-item--search {
+      display: inherit;
+    }
+
+    &__user-link svg {
+      width: 24px;
+      height: 24px;
+    }
+
+    //  &__user-link svg use{
+    //    width: 24px;
+    //    height: 24px;
+    //  }
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .menu__btn {
+    display: block;
+    width: 30px;
+    height: 20px;
+    border: none;
+    padding: 0;
+    background-color: transparent;
+    position: relative;
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      right: 0;
+      height: 2px;
+      background-color: $white;
+      transition: all 0.3s;
+    }
+
+    &::before {
+      top: 0;
+    }
+
+    &::after {
+      bottom: 0;
+    }
+
+    span {
+      position: absolute;
+      background-color: $white;
+      right: 0;
+      width: 100%;
+      height: 2px;
+      // top: 10px;
+      transition: all 0.3s;
+    }
+  }
+
+
 }
