--- a/app/scss/index/service.scss
+++ b/app/scss/index/service.scss
@@ -57,6 +57,8 @@
   }
 }
 
+
+
 @media (max-width: $lg) {
   .service {
     &__inner {
@@ -77,6 +79,7 @@
   .service {
     &__inner {
       flex-direction: column;
+      align-items: center;
     }
 
     &__item:not(:last-child) {
@@ -85,11 +88,19 @@
     }
 
     &__item--24-hours {
-      margin-right: 50px;
+      margin-right: 72px;
     }
 
     &__text {
       max-width: none;
+    }
+  }
+}
+
+@media (max-width: $sm) {
+  .service {
+    &__inner {
+      align-items: flex-start;
     }
   }
 }
