--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -59,9 +59,9 @@ body {
   }
 }
 
-  .logo-short {
-    display: none;
-  }
+.logo-short {
+  display: none;
+}
 
 .btn-green {
   background-color: $green-900;
@@ -143,7 +143,7 @@ body {
     background-color: $green-900;
     color: $white;
     transition: background-color 0.5s,
-    box-shadow 0.5s;
+      box-shadow 0.5s;
 
     &:hover {
       background-color: #4D810C;
@@ -228,4 +228,28 @@ body {
   &:active {
     color: $green-200;
   }
+}
+
+@media (max-width: $sm) {
+  .title {
+    font-size: 24px;
+    margin-bottom: 24px;
+  }
+
+  .mixer {
+    margin-bottom: 24px;
+
+    &__button {
+      font-size: 14px;
+    }
+
+    &__item {
+      margin-top: 15px;
+    }
+  }
+
+  .indent {
+    padding: 48px 0;
+  }
+
 }
