--- a/app/scss/product-item--mini.scss
+++ b/app/scss/product-item--mini.scss
@@ -1,4 +1,3 @@
-
 .product-item.product-item--mini {
   height: 124px;
   position: relative;
@@ -15,7 +14,8 @@
   }
 
   .product-item__img-link {
-    overflow: visible; 
+    overflow: visible;
+
     &::before,
     &::after {
       display: none;
@@ -44,8 +44,9 @@
     position: absolute;
     top: 12px;
     left: -1px;
-    transform: translateX(107px);
-    width: 205px;
+    transform: translateX(111px);
+    width: 187px;
+    padding: 0 12px;
   }
 
   .product-item__status {
@@ -120,5 +121,44 @@
 
   .btn-show__mini {
     background-color: $green-900;
+  }
+}
+
+
+
+
+@media (max-width: $xxl) {
+  .product-item.product-item--mini {
+    .product__items {
+      grid-gap: 15px;
+    }
+
+    .product-item__title {
+      width: 164px;
+    }
+  }
+}
+
+@media (max-width: $xl) {
+  .product-item.product-item--mini {
+    .product__items {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media (max-width: $lg) {
+  .product-item.product-item--mini {
+    .product-item__title {
+      width: 190px;
+    }
+  }
+}
+
+@media (max-width: $md) {
+  .product-item.product-item--mini {
+    .product-item__price {
+      transform: translate(12px, -42px);
+    }
   }
 }
