--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -150,3 +150,78 @@
     }
   }
 }
+
+
+@media (max-width: $xl) {
+  .footer {
+    text-align: center;
+  }
+
+  .footer-top {
+    flex-direction: column;
+    justify-content: center;
+    padding: 24px 0;
+
+
+    &__contact {
+      order: -3;
+      max-width: none;
+      padding-bottom: 24px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1)
+    }
+
+    &__list {
+      max-width: none;
+      order: -2;
+      margin: 0 auto;
+      transform: none;
+      padding: 24px 0;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      column-count: 4;
+    }
+
+    &__logo {
+      margin-top: 24px;
+    }
+
+    &__social {
+      margin: 0 auto;
+    }
+
+    &__item {
+      max-width: none;
+      padding-top: 24px;
+    }
+
+    &__form {
+      display: inline-flex;
+    }
+  }
+}
+
+@media (max-width: $md) {
+  .footer-top {
+    &__list {
+      column-count: 3;
+    }
+  }
+}
+
+@media (max-width: $sm) {
+  .footer-top {
+    &__list {
+      column-count: 2;
+    }
+  }
+
+  .footer-bottom {
+    &__wrap {
+      flex-direction: column;
+    }
+
+    &__img {
+      order: -1;
+      margin-bottom: 24px;
+    }
+  }
+}
