--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -48,10 +48,6 @@
   }
 }
 
-// .menu__btn{
-//   display: none;
-// }
-
 .header-bottom {
   background-color: $green-900;
 
@@ -136,6 +132,16 @@
       outline: 3px solid $white;
       border-radius: 3px;
     }
+
+    svg {
+      width: 20px;
+      height: 21px;
+    }
+
+    use {
+      width: 20px;
+      height: 21px;
+    }
   }
 
   &__search-input {
@@ -200,6 +206,30 @@
     &:active svg use {
       fill: rgba(255, 255, 255, 0.5);
     }
+  }
+
+  &__user-link--user svg,
+  &__user-link--user use {
+    width: 25px;
+    height: 32px;
+  }
+
+  &__user-link--search svg,
+  &__user-link--search use {
+    width: 24px;
+    height: 24px;
+  }
+
+  &__user-link--heart svg,
+  &__user-link--heart use {
+    width: 32px;
+    height: 29px;
+  }
+
+  &__user-link--cart svg,
+  &__user-link--cart use {
+    width: 32px;
+    height: 31px;
   }
 
   &__user-num {
@@ -271,6 +301,12 @@
 
 @media (max-width: $lg) {
   .header-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+
     &__link {
       color: transparent;
       font-size: 1px;
@@ -278,7 +314,7 @@
 
       &::before {
         top: 0px;
-        right: 0;
+        right: 5px;
         left: revert;
       }
 
@@ -297,6 +333,7 @@
   }
 
   .header-bottom {
+    padding-top: 48px;
 
     &__btn,
     &__search {
@@ -307,6 +344,15 @@
       padding: 11px 0;
     }
 
+    &__user-nav {
+      max-width: 155px;
+    }
+
+    &__user-link {
+      width: 40px;
+      height: 40px;
+    }
+
     &__user-link--user {
       display: none;
     }
@@ -315,15 +361,31 @@
       display: inherit;
     }
 
+    // не получается сделать чтобы при нажатии на поиск выпадал сам поиск. 
+    &__search {
+      // display: flex;
+      transform: translate(23px, 61px);
+      z-index: 10;
+    }
+
+    &__search-input {
+      // min-width: 100%;
+      border-radius: 0;
+    }
+
+    &__search-btn {
+      border-radius: 0;
+      min-width: 110px;
+    }
+
+    &__user-item:not(:last-child) {
+      margin-right: 8px;
+    }
+
     &__user-link svg {
       width: 24px;
       height: 24px;
     }
-
-    //  &__user-link svg use{
-    //    width: 24px;
-    //    height: 24px;
-    //  }
   }
 
   .menu {
@@ -344,14 +406,14 @@
       content: '';
       position: absolute;
       width: 100%;
-      right: 0;
+      right: -7px;
       height: 2px;
       background-color: $white;
-      transition: all 0.3s;
+      transition: all 0.3s ease 0s;
     }
 
     &::before {
-      top: 0;
+      top: -2px;
     }
 
     &::after {
@@ -361,12 +423,26 @@
     span {
       position: absolute;
       background-color: $white;
-      right: 0;
+      right: -7px;
       width: 100%;
       height: 2px;
-      // top: 10px;
-      transition: all 0.3s;
+      top: 8px;
+      transition: all 0.3s ease 0s;
     }
+  }
+
+  .menu__btn.active::before {
+    transform: rotate(45deg);
+    top: 9px;
+  }
+
+  .menu__btn.active::after {
+    transform: rotate(-45deg);
+    bottom: 9px;
+  }
+
+  .menu__btn.active span {
+    transform: scale(0);
   }
 
 
