--- a/app/scss/product-item.scss
+++ b/app/scss/product-item.scss
@@ -102,7 +102,13 @@
     height: 57px;
   }
 
-  svg use {
+  &__heart svg,
+  &__heart use {
+    width: 38px;
+    height: 29px;
+  }
+
+  &__heart svg use {
     fill: #C1C1C1;
   }
 
@@ -224,6 +230,12 @@
 
   .product-item {
     height: 304px;
+
+    &__heart svg,
+    &__heart use {
+      width: 24px;
+      height: 21px;
+    }
 
     &__img-box,
     &__link,
