--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'global';
 @import 'libs';
 @import 'header';
+@import 'mob-menu';
 @import 'footer';
 @import 'index/slider-top';
 @import 'index/service';
