--- a/app/scss/header/header-bottom.scss
+++ b/app/scss/header/header-bottom.scss
@@ -1,53 +1,3 @@
-.header-top {
-  background-color: $dark-800;
-  padding: 13px 0;
-
-  &__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    @extend %opensans-700;
-    font-size: 13px;
-    line-height: 1.8;
-    text-transform: uppercase;
-  }
-
-  &__link:not(:last-child) {
-    margin-right: 45px;
-  }
-
-  &__link {
-    position: relative;
-
-    &--address {
-      padding-left: 44px;
-    }
-
-    &--tel {
-      padding-left: 34px;
-    }
-  }
-
-  &__link::before {
-    content: '';
-    position: absolute;
-    height: 22px;
-    left: 0;
-    top: -3px;
-    @extend %bg-img;
-  }
-
-  &__link--address::before {
-    background-image: url(../images/icons/icon-address.svg);
-    width: 32px;
-  }
-
-  &__link--tel::before {
-    background-image: url(../images/icons/icon-tel.svg);
-    width: 22px;
-  }
-}
-
 .header-bottom {
   background-color: $green-900;
 
@@ -255,25 +205,6 @@
   }
 }
 
-.menu {
-  &__list {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__item:not(:last-child) {
-    padding-right: 24px;
-  }
-
-  &__btn {
-    display: none;
-  }
-}
-
-
-
-// ====================================================================================================================================================================================================================================================================================================================================================================
-
 
 @media (max-width: $xxl) {
   .header-bottom {
@@ -300,45 +231,8 @@
 }
 
 @media (max-width: $lg) {
-  .header-top {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 10;
-
-    &__link {
-      color: transparent;
-      font-size: 1px;
-      position: static;
-
-      &::before {
-        top: 0px;
-        right: 5px;
-        left: revert;
-      }
-
-      &--address {
-        padding-left: 0;
-      }
-
-      &--address::before {
-        margin-right: 50px;
-      }
-    }
-
-    &__inner {
-      position: relative;
-    }
-  }
-
   .header-bottom {
     padding-top: 48px;
-
-    &__btn,
-    &__search {
-      display: none;
-    }
 
     &__inner {
       padding: 11px 0;
@@ -361,16 +255,25 @@
       display: inherit;
     }
 
-    // не получается сделать чтобы при нажатии на поиск выпадал сам поиск. 
-    &__search {
-      // display: flex;
-      transform: translate(23px, 61px);
+      &__btn,
+      &__search {
+        display: none;
+        transform: all 0.7s;
+      }
+
+// при клике на поиск зеденый хеадер делается шире
+    &__search.active {
+      display: flex;
       z-index: 10;
+      transform: translate(70px, 61px);
+      margin: 0 -100px;
     }
 
     &__search-input {
-      // min-width: 100%;
       border-radius: 0;
+      min-width: fit-content;
+      width: 100%;
+      height: 100%;
     }
 
     &__search-btn {
@@ -387,63 +290,4 @@
       height: 24px;
     }
   }
-
-  .menu {
-    display: none;
-  }
-
-  .menu__btn {
-    display: block;
-    width: 30px;
-    height: 20px;
-    border: none;
-    padding: 0;
-    background-color: transparent;
-    position: relative;
-
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      right: -7px;
-      height: 2px;
-      background-color: $white;
-      transition: all 0.3s ease 0s;
-    }
-
-    &::before {
-      top: -2px;
-    }
-
-    &::after {
-      bottom: 0;
-    }
-
-    span {
-      position: absolute;
-      background-color: $white;
-      right: -7px;
-      width: 100%;
-      height: 2px;
-      top: 8px;
-      transition: all 0.3s ease 0s;
-    }
-  }
-
-  .menu__btn.active::before {
-    transform: rotate(45deg);
-    top: 9px;
-  }
-
-  .menu__btn.active::after {
-    transform: rotate(-45deg);
-    bottom: 9px;
-  }
-
-  .menu__btn.active span {
-    transform: scale(0);
-  }
-
-
 }
