--- a/app/scss/catalog-page/catalog-page.scss
+++ b/app/scss/catalog-page/catalog-page.scss
@@ -1,5 +1,5 @@
 .catalog-page {
-  padding: 48px 72px;
+  padding: 48px 0 73px;
 
   &__title {
     @extend %ruda-700;
@@ -60,6 +60,18 @@
 .filter-categories {
   &__list {
     padding: 18px;
+    height: 290px;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      width: 4px;
+      background-color: $white;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 3px;
+      background-color: #C4C4C4;
+    }
   }
 
   &__item:not(:last-child) {
@@ -78,9 +90,12 @@
     padding: 18px;
   }
 
+  &__form:not(:last-child) {
+    margin-bottom: 12px;
+  }
+
   &__label {
     display: block;
-    margin-bottom: 12px;
     padding-left: 36px;
   }
 
@@ -102,6 +117,10 @@
     border: 1px solid $silver-600;
     border-radius: 3px;
     margin-left: -35px;
+
+    &:hover {
+      border-color: $dark-500;
+    }
   }
 
   &__text {
@@ -128,30 +147,42 @@
 
   &__from,
   &__to {
+    display: inline-block;
+    width: 80px;
     padding: 12px 20px;
     background: #F6F6F6;
     border: 1px solid $silver-100;
     border-radius: 3px;
     color: #505050;
-    display: inline-block;
+    text-align: center;
+
+    &:focus {
+      border-color: $silver-600;
+      outline: 3px solid $green-200;
+      border-radius: 3px;
+    }
   }
 }
 
+.irs--flat {
+  height: 36px;
+}
+
 .irs--flat .irs-bar {
-  top: 25px;
+  top: 27px;
   height: 2px;
   background-color: $green-900;
 }
 
 .irs--flat .irs-line {
-  top: 25px;
+  top: 27px;
   height: 2px;
   background-color: #C4C4C4;
   border-radius: 4px;
 }
 
 .irs--flat .irs-handle {
-  top: 17px;
+  top: 19px;
   width: 18px;
   height: 18px;
   border-radius: 50%;
@@ -178,7 +209,47 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-bottom: 48px;
+    margin-bottom: 42px;
+  }
+
+  .product-item {
+    &__info {
+      display: flex;
+    }
+
+    &__status {
+      position: absolute;
+      transform: translate(18px, -7px);
+      text-transform: uppercase;
+      font-size: 10px;
+      line-height: 1;
+      color: #63a60e;
+    }
+
+    &__rating {
+      position: relative;
+      left: 242px;
+      bottom: 6px;
+      line-height: 1;
+
+      &::before {
+        content: "";
+        position: absolute;
+        background-image: url('../images/promotions/star.png');
+        width: 16px;
+        height: 16px;
+        left: 23px;
+        bottom: 0;
+      }
+    }
+
+    &__title {
+      transform: translateY(0);
+    }
+
+    &__price {
+      padding: 0px 18px 11px 19px;
+    }
   }
 
   &__filter-btn {
@@ -192,6 +263,10 @@
     }
   }
 
+  &__filter-name {
+    margin-right: 11px;
+  }
+
   &__filter-number {
     margin-right: 15px;
   }
@@ -200,22 +275,85 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
-    // justify-content: space-between;
-    // flex-wrap: wrap;
+    margin-bottom: 48px;
+
+    &.catalog-page__content-inner--list {
+      grid-template-columns: repeat(2, 1fr);
+
+      .product-item {
+        min-width: 466px;
+        height: 162px;
+
+        &__img-box,
+        &__img-link,
+        &__images {
+          width: 200px;
+          height: 150px;
+        }
+
+        &__img-box {
+          transform: translateY(-52px);
+        }
+
+        &__img-link {
+          overflow: visible;
+        }
+
+        &__top {
+          z-index: 2;
+        }
+
+        &__title {
+          transform: translate(202px, -186px);
+          width: 195px;
+        }
+
+        &__price {
+          width: 263px;
+          position: absolute;
+          transform: translate(202px, -177px);
+        }
+
+        &__status {
+          transform: translate(218px, -197px);
+        }
+
+        // при адаптиве рейтинг вылазит за пределы карточки, не получается сделать так чтобы он подстраивался под адаптивность карточки товара
+        &__rating {
+          left: 407px;
+          bottom: 199px;
+        }
+
+        &__heart {
+          right: 11px;
+          top: 59px;
+        }
+
+        &__span {
+          left: 7px;
+          top: 3px;
+        }
+      }
+    }
   }
 
-  // .product-item:not(:last-child) {
-  //   margin-right: 30px;
-  // }
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__button-filters {
+    display: none;
+  }
 }
 
 .button-list {
-  margin-right: 15px;
+  margin-right: 11px;
 }
 
 .jq-selectbox__select {
   height: 47px;
-  padding: 15px 42px 15px 11px;
+  padding: 15px 49px 15px 11px;
   border: 1px solid #ccc;
   border-bottom-color: #b3b3b3;
   border-radius: 3px;
@@ -230,6 +368,13 @@
 
   &:hover {
     background: transparent;
+  }
+
+  // не понимаю почему фокус на него не работает вообще
+  &:focus {
+    border: 1px solid #C1C1C1;
+    outline: 3px solid #E0EDCF;
+    border-radius: 3px;
   }
 }
 
@@ -249,4 +394,232 @@
   height: 6px;
   border: none;
   background-image: url('../images/icons/chevron-select.svg');
+}
+
+.jq-selectbox__dropdown {
+  box-shadow: none;
+}
+
+.jq-selectbox li {
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: #505050;
+}
+
+.jq-selectbox li.selected {
+  background-color: #63A60E;
+  color: #fff;
+}
+
+.jq-selectbox li:hover {
+  background-color: #63A60E;
+  color: #fff;
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+
+
+  &__list {
+    display: flex;
+  }
+
+  &__item {
+    margin: 0 3px;
+  }
+
+  &__link {
+    font-size: 18px;
+    line-height: 1.0;
+    color: $dark-500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    background-color: $silver-100;
+    border-radius: 3px;
+
+    &:hover {
+      border: 1px solid $silver-600;
+    }
+
+    &:focus {
+      outline: 3px solid $green-200;
+    }
+
+    &:active {
+      box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+  }
+
+  &__link--active {
+    border: 1px solid $dark-500;
+  }
+
+  &__arrows {
+    position: relative;
+    width: 48px;
+    height: 48px;
+    background-color: $silver-100;
+    border-radius: 3px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 11px;
+      height: 18px;
+      top: 16px;
+    }
+  }
+
+  &__prev {
+    margin-right: 3px;
+
+    &::before {
+      background-image: url('../images/icons/pagination-arrow-prev.svg');
+      left: 16px;
+    }
+  }
+
+  &__next {
+    margin-left: 3px;
+
+    &::before {
+      background-image: url('../images/icons/pagination-arrow-next.svg');
+      right: 16px;
+    }
+  }
+}
+
+
+
+@media (max-width: $lg) {
+  .catalog-page {
+
+    &__filter {
+      position: fixed;
+      width: 320px;
+      background-color: $white;
+      left: -100%;
+      top: 0;
+      z-index: 999;
+      // не понимаю почему не работает скролл
+      overflow-y: scroll;
+
+      &.active {
+        left: 0;
+      }
+    }
+
+    &__button-filters {
+      display: block;
+      position: relative;
+      border: none;
+      padding: 0;
+      background-color: transparent;
+      width: 47px;
+      height: 47px;
+      background-color: $silver-100;
+      border-radius: 3px;
+      margin-right: 10px;
+      cursor: pointer;
+
+      &::before {
+        content: '';
+        position: absolute;
+        background-image: url('../images/icons/button-filter.svg');
+        width: 32px;
+        height: 34px;
+        top: 6px;
+        right: 7px;
+      }
+    }
+
+    &__filter-buttons {
+      display: none;
+    }
+  }
+
+  .filter-categories {
+    margin-top: 53px;
+  }
+}
+
+@media (max-width: $md) {
+  .catalog-page {
+    padding: 30px 0 36px;
+
+    &__content-inner {
+      grid-gap: 5px;
+      margin-bottom: 24px;
+    }
+
+    &__bottom {
+      display: block;
+    }
+
+    &__content {
+      text-align: center;
+    }
+
+    &__link {
+      margin-bottom: 24px;
+    }
+
+    &__filter-wrapper {
+      justify-content: flex-start;
+      margin-bottom: 30px;
+    }
+
+    &__title {
+      margin-bottom: 30px;
+      font-size: 30px;
+    }
+
+    .product-item__price {
+      padding: 39px 12px 5px 10px;
+    }
+
+    .product-item__status {
+      font-size: 8px;
+      transform: translate(11px, -9px);
+    }
+
+    .product-item__rating {
+          left: 126px;
+      font-size: 10px;
+      bottom: 10px;
+    }
+    .product-item__rating::before {
+      width: 12px;
+      height: 12px;
+      left: 17px;
+      bottom: 0;
+      background-size: contain;
+    }
+  }
+
+  .jq-selectbox__select {
+    font-size: 12px;
+    padding: 15px 27px 15px 9px;
+  }
+
+  .catalog-page__filter-name {
+    margin-right: 5px;
+  }
+
+  .jq-selectbox__trigger-arrow {
+    right: 8px;
+  }
+}
+
+@media (max-width: $sm) {
+  .catalog-page {
+    &__content-inner {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
 }
