--- a/app/scss/mob-menu.scss
+++ b/app/scss/mob-menu.scss
@@ -2,6 +2,7 @@
   display: none;
 }
 
+// при нажатии вне меню на экран затемненный чтобы меню закрылось у меня не получается сделать. Смотрела в нете есть реализации и я пробывала несколько, но не работает, вообще не понимаю как это сделать...помоги пжл
 @media (max-width: $lg) {
   .mob-menu {
     display: flex;
@@ -12,16 +13,22 @@
     left: -100%;
     background-color: $white;
     position: fixed;
-    z-index: 2;
+    z-index: 999;
 
-      &.active {
-        left: 0;
-      }
+    &.active {
+      left: 0;
+    }
+
+    .btn__close::before {
+      top: -65px;
+      left: 256px;
+    }
 
     &__profile {
       display: flex;
       background-color: #63A60E;
       align-items: center;
+      height: 48px;
     }
 
     &__login {
@@ -33,7 +40,7 @@
     &__login--slash {
       position: relative;
       padding-right: 20px;
-      margin-right: 15px;
+      margin-right: 19px;
 
       &::before {
         content: '';
@@ -41,8 +48,8 @@
         width: 2px;
         height: 18px;
         background-color: $white;
-        left: 59px;
-        top: 0;
+        left: 62px;
+        top: 2px;
       }
     }
 
@@ -50,13 +57,13 @@
       display: inherit;
       color: $dark-800;
       font-size: 18px;
-      padding: 9px 15px 9px 50px;
+      padding: 13px 15px 34px 53px;
       height: 42px;
 
       &::before {
         background-image: url('../images/icons/nav_icon-black.svg');
-        top: 13px;
-        left: 11px;
+        top: 15px;
+        left: 12px;
       }
 
       &::after {
@@ -67,51 +74,54 @@
     &__contact {
       display: flex;
       flex-direction: column;
-      padding: 23px 15px 14px;
+      padding: 24px 15px 14px;
       border-top: 1px solid rgba(193, 193, 193, 0.3);
+      font-size: normal;
     }
 
     &__info {
       font-size: 18px;
-      line-height: 1.0;
+      line-height: 1.2;
       color: $dark-800;
       position: relative;
-      padding-left: 33px;
+      padding-left: 39px;
+      margin-bottom: 5px;
 
       &::after {
         content: '';
         position: absolute;
         width: 24px;
         left: 0;
-        top: 0;
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
       }
 
       &--tell {
-        margin-bottom: 21px;
+        margin-bottom: 18px;
       }
 
       &--tell::after {
         background-image: url('../images/icons/icon-tel-black.svg');
-        height: 23px;
+        height: 24px;
+        top: -2px;
       }
 
       &--address::after {
         background-image: url('../images/icons/group.svg');
         height: 32px;
+        top: 5px;
       }
     }
 
     &__social {
       display: flex;
-      padding: 0 13px 13px;
+      padding: 0 14px 20px;
       border-bottom: 1px solid rgba(193, 193, 193, 0.3);
     }
 
     &__social-list:not(:last-child) {
-      margin-right: 7px;
+      margin-right: 11px;
     }
 
     &__social-link {
@@ -142,7 +152,7 @@
     }
 
     &__item:not(:last-child) {
-      margin-bottom: 12px;
+      margin-bottom: 15px;
     }
 
     &__link {
@@ -155,7 +165,7 @@
     .header-bottom__user-link {
       width: 30px;
       height: 43px;
-      margin: 0 10px;
+      margin: 0 13px;
 
       svg {
         width: 25px;
@@ -173,9 +183,8 @@
     }
   }
 
-
   .logo-green {
     display: inline-block;
-    margin: 21px 13px;
+    margin: 23px 17px;
   }
 }
