corrected section service

--- a/app/scss/catalog-page/catalog-page.scss
+++ b/app/scss/catalog-page/catalog-page.scss
@@ -1,3 +1,6 @@
+
+// посмотри пожалуйста при проверке на пиксель перфект ширину самого макета 375px у меня он чутка шире, 390px, проверяла настройки, выставлена 1 (scale) как и должно быть
+
 .catalog-page {
   padding: 48px 0 73px;
 
