--- a/app/scss/catalog-page/catalog-page.scss
+++ b/app/scss/catalog-page/catalog-page.scss
@@ -1,4 +1,3 @@
-
 // посмотри пожалуйста при проверке на пиксель перфект ширину самого макета 375px у меня он чутка шире, 390px, проверяла настройки, выставлена 1 (scale) как и должно быть
 
 .catalog-page {
@@ -40,6 +39,7 @@
     @extend %none-btn;
     position: relative;
     cursor: pointer;
+    transition: all 1s linear;
 
     &::after {
       content: '';
@@ -50,6 +50,9 @@
       top: 10px;
       right: 0px;
     }
+    // .transform::after {
+    //   transform: rotate(180deg);
+    // }
   }
 
   &__title {
@@ -506,9 +509,10 @@
       position: fixed;
       width: 320px;
       background-color: $white;
-      left: -100%;
+      left: -200%;
       top: 0;
       z-index: 999;
+      transition: left 0.6s;
       // не понимаю почему не работает скролл
       overflow-y: scroll;
 
@@ -547,7 +551,7 @@
   }
 
   .filter-categories {
-    margin-top: 53px;
+    margin-top: 76px;
   }
 }
 
@@ -592,10 +596,11 @@
     }
 
     .product-item__rating {
-          left: 126px;
+      left: 126px;
       font-size: 10px;
       bottom: 10px;
     }
+
     .product-item__rating::before {
       width: 12px;
       height: 12px;
