--- a/app/scss/mob-menu.scss
+++ b/app/scss/mob-menu.scss
@@ -10,13 +10,14 @@
     width: 300px;
     height: 100%;
     top: 0;
-    left: -100%;
+    transform: translateX(-100%);
     background-color: $white;
     position: fixed;
     z-index: 999;
+    transition: transform 0.5s;
 
     &.active {
-      left: 0;
+      transform: translateX(0%);
     }
 
     .btn__close::before {
